--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "color-editor",
-	"version": "0.1.0",
+	"name": "Hehex-color-picker",
+	"version": "0.1.1",
 	"private": true,
 	"scripts": {
 		"serve": "vue-cli-service serve",
